# RalphtonICML

./: .gitignore  Makefile  README.md  plan.md  prompts.py  pyproject.toml  review_prompts.py  reviewer_instruction.md  setup.py
artifacts/real_seed_v1/: HUMAN_REVIEW.md  best_state.json  config.json  dev_review_preview.md  history.json  prompt_manifest.json  run_manifest.json  split.json  summary.json
artifacts/reviews/2602.00521v2/: author_rebuttal.md  initial_review.md  paper.json  progress.failed-chair-format.jsonl  progress.failed-chair-headings.jsonl  progress.jsonl  quality_audit.md  review.md  review_run.json  run-1-failure.md  run-2-failure.md  synthesis.md
configs/: learning.json
data/real/: seed_cases.jsonl  seed_manifest.json
ralphton_icml/: __init__.py  backend.py  batch.py  cli.py  codex_backend.py  context.py  experiment.py  fast.py  fast_schema.py  instruction.py  learning.py  openreview.py  orchestrator.py  schema.py  seed.py  team.py  track2.py
report/: Makefile  README.md  references.bib  report.tex
scripts/: build_fast_benchmark.py  build_real_seed.py  codex_backend_adapter.py  validate_fast_benchmark.py
skills/auto-research/assets/: track-2-agent-template.md
tests/: test_batch.py  test_cli_track2.py  test_codex_backend_adapter.py  test_codex_exec_backend.py  test_fast_benchmark.py  test_fast_pipeline.py  test_fast_schema.py  test_openreview_learning.py  test_orchestrator_backend.py  test_real_seed.py  test_schema_context_team.py  test_track2.py
tests/fixtures/: openreview_forum.json
